Removed try-catch. Fixed getPaymentMethods method